--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,9 @@ textarea {
 
 #nB0 {
 	position: relative;
-	text-align: center;
-	right: 1em;
+	right: 1.1em;
 } 
+
 .nB0Item {
 	display: inline;
 	list-style-type: none;
@@ -33,15 +33,27 @@ textarea {
 }
 
 #header {
-	text-align: center;
 	position: relative;	
 	text-decoration: underline !important;
+}
+
+#headerDiv {
+	width: 100%;
+	text-align: center;
+
 }
 
 .input_Output {
 	position: relative;
 	text-decoration: underline !important;
 	bottom: 0.5em;
+	text-align: center;
+}
+
+#mdpDiv {
+	width: 100%;
+	position: relative;
+	text-align: center;
 }
 
 /* Also included in markDownOutput.js */
@@ -58,14 +70,12 @@ textarea {
 }
 
 #input {
-	text-align: center;
 	position: relative;
 	top: 1em;
 	left: 8.5em;
 }
 
 #output {
-	text-align: center;
 	position: relative;
 	left: 45em;
 	bottom: 39.6em;
@@ -80,21 +90,13 @@ textarea {
 	border-style: none;
 	border-width: 0.2em;
 	border-radius: 1.5em;
-	height: 38em;
+	height: 38.5em;
 	width: 37em;
 	position: relative;
 	bottom: 2em;
 	font-size: 0.9em;
 	background-color: blue;
 	background-color: rgba(42, 109, 131, 1); 
-}
-
-#footer {
-	position: absolute;
-	text-align: center;
-	left: 9.8em;
-	width: 70em;
-	bottom: 0.1em;
 }
 
 /* markDownOutput.js */
@@ -120,4 +122,15 @@ textarea {
 
 #aboutDiv {
 	position: relative;
+}
+
+footer {
+	position: relative;
+	top: 35em;
+	z-index: 1;
+
+}
+
+h4 {
+	text-align: center;
 }
