--- a/src/index.css
+++ b/src/index.css
@@ -40,12 +40,6 @@ a {
   color: white;
 }
 
-::-webkit-scrollbar {
-  width: 0em;
-  height: 0em;
-  background: transparent;
-}
-
 /* app.js */
 
 #contain {
@@ -86,7 +80,7 @@ a {
 }
 
 #editorDiv {
-  overflow: scroll;
+  overflow: auto;
 }
 
 #editor {
@@ -115,7 +109,7 @@ textarea:focus {
 #preview {
   position: relative;
   text-decoration: none;
-  overflow: scroll;
+  overflow: auto;
 }
 
 /* about.js */
